--- a/public_html/entradas.html
+++ b/public_html/entradas.html
@@ -18,8 +18,8 @@ and open the template in the editor.
           <ul>
             <li><a href="index">Inicio</a></li>
             <li><a href="peliculas.html">Peliculas</a></li>
-            <li><a href="#contact">Promociones</a></li>
-            <li><a href="#contact">Entradas</a></li>
+            <li><a href="promociones.html">Promociones</a></li>
+            <li><a href="entradas.html">Entradas</a></li>
             <li style="float:right"><a class="active" href="#about">Login</a></li>
           </ul>
       </div>
