--- a/public_html/Pelicula1.html
+++ b/public_html/Pelicula1.html
@@ -16,10 +16,10 @@ and open the template in the editor.
 
       <div id="menu">
           <ul>
-            <li><a href="#index">Inicio</a></li>
-            <li><a href="#news">Peliculas</a></li>
-            <li><a href="#contact">Promociones</a></li>
-            <li><a href="#contact">Entradas</a></li>
+              <li><a href="index.html">Inicio</a></li>
+            <li><a href="peliculas.html">Peliculas</a></li>
+            <li><a href="promociones.html">Promociones</a></li>
+            <li><a href="entradas.html">Entradas</a></li>
             <li style="float:right"><a class="active" href="#about">Login</a></li>
           </ul>
       </div>
