--- a/public_html/peliculas.html
+++ b/public_html/peliculas.html
@@ -16,10 +16,10 @@ and open the template in the editor.
 
       <div id="menu">
           <ul>
-            <li><a href="#index">Inicio</a></li>
-            <li><a href="#news">Peliculas</a></li>
-            <li><a href="#contact">Promociones</a></li>
-            <li><a href="#contact">Entradas</a></li>
+              <li><a href="index.html">Inicio</a></li>
+            <li><a href="peliculas.html">Peliculas</a></li>
+            <li><a href="promociones.html">Promociones</a></li>
+            <li><a href="entradas.html">Entradas</a></li>
             <li style="float:right"><a class="active" href="#about">Login</a></li>
           </ul>
       </div>
@@ -32,18 +32,18 @@ and open the template in the editor.
                   <th>Imagen</th>
               </tr>
               <tr>
-                  <td></td>
-                  <td><p><a href="Pelicula1.html">ver mas detalles</a> </td>
+                  <td>Thor: Ragnarok</td>
+                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <a href="Pelicula1.html">ver mas detalles</a> </p></td>
+                  <td> </td>
+              </tr>
+              <tr>
+                  <td>La Momia</td>
+                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Cine de acción, Cine de aventuras, cine de fantasía y cine de terror <a href="Pelicula2.html">ver mas detalles</a> </p></td>
                   <td></td>
               </tr>
               <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
+                  <td>Piratas del Caribe: La venganza de Salazar</td>
+                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Aventuras, Acción, Comedia, Fantasía <a href="Pelicula3.html">ver mas detalles</a> </p></td>
                   <td></td>
               </tr>
           </table>
