cambie las paginas de cada pelicula, para no poner en tablas

--- a/public_html/Pelicula1.html
+++ b/public_html/Pelicula1.html
@@ -25,29 +25,23 @@ and open the template in the editor.
       </div>
 
       <div id="contenido">
-          <table id="tablaPel">
-              <tr>
-                  <th>Nombre</th>
-                  <th>Detalle</th>
-                  <th>Imagen</th>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td><p><a href="Pelicula1.html">ver mas de</a> </p></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr>
-          </table>
           
+          <h4>Thor: Ragnarok</h4>
+          <img src="resources/images/thor.jpg" alt="portada1">
+          <p>
+            Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <br/> 
+            Dirección: Taika Waititi <br/> Producción: Kevin Feige <br/> Guion:	Eric Pearson <br/>
+            Basada en: Thor de Stan Lee, Jack Kirby & Larry Lieber <br/> 
+            Protagonistas: Chris Hemsworth <br/> Tom Hiddleston <br/> Cate Blanchett <br/> Mark Ruffalo <br/> 
+            Idris Elba <br/> Tessa Thompson <br/> Benedict Cumberbatch <br/> Karl Urban <br/> Jeff Goldblum <br/> Anthony Hopkins <br/>
+            Compañías: <br/> Productora: Marvel Studios <br/>Distribución: Walt Disney Pictures.<br/>
+          <h3>Sinopsis</h3> Asgard se encuentra en manos de una poderosa amenaza, la despiadada y todopoderosa Hela (Cate Blanchett), 
+          que ha robado el trono y ha encarcelado a Thor (Chris Hemsworth), enviándole como prisionero hasta el otro extremo de la galaxia. 
+          Sin su martillo, el mítico y poderoso Mjölnir, el Dios del Trueno se encontrará a sí mismo en una carrera contra el tiempo. <br/>
+          En el planeta Sakaar, Thor tendrá que luchar por su vida como un gladiador. Para escapar de su cautiverio, Thor tendrá que resultar 
+          vencedor en una competición alienígena, y derrotar a su antiguo aliado y amigo Vengador El increíble Hulk (Mark Ruffalo). Pero, 
+          por alguna misteriosa razón, Hulk no recuerda a su compañero Vengador. Claro que, por encima de todo, el objetivo del Dios del trueno 
+          será volver a Asgard y parar el Ragnarok, un ciclo de vida y muerte sin fin que podría significar la destrucción total e inminente de la civilización asgardiana. </p>
           <video src="resources/video/demon 01.mp4" id="trailer" controls></video>
 
       </div>
