cambie las paginas de cada pelicula, para no poner en tablas y le hice andar el video

--- a/public_html/Pelicula1.html
+++ b/public_html/Pelicula1.html
@@ -35,14 +35,14 @@ and open the template in the editor.
             Protagonistas: Chris Hemsworth <br/> Tom Hiddleston <br/> Cate Blanchett <br/> Mark Ruffalo <br/> 
             Idris Elba <br/> Tessa Thompson <br/> Benedict Cumberbatch <br/> Karl Urban <br/> Jeff Goldblum <br/> Anthony Hopkins <br/>
             Compañías: <br/> Productora: Marvel Studios <br/>Distribución: Walt Disney Pictures.<br/>
-          <h3>Sinopsis</h3> Asgard se encuentra en manos de una poderosa amenaza, la despiadada y todopoderosa Hela (Cate Blanchett), 
+          <!--<h3>Sinopsis</h3>--> Asgard se encuentra en manos de una poderosa amenaza, la despiadada y todopoderosa Hela (Cate Blanchett), 
           que ha robado el trono y ha encarcelado a Thor (Chris Hemsworth), enviándole como prisionero hasta el otro extremo de la galaxia. 
           Sin su martillo, el mítico y poderoso Mjölnir, el Dios del Trueno se encontrará a sí mismo en una carrera contra el tiempo. <br/>
           En el planeta Sakaar, Thor tendrá que luchar por su vida como un gladiador. Para escapar de su cautiverio, Thor tendrá que resultar 
           vencedor en una competición alienígena, y derrotar a su antiguo aliado y amigo Vengador El increíble Hulk (Mark Ruffalo). Pero, 
           por alguna misteriosa razón, Hulk no recuerda a su compañero Vengador. Claro que, por encima de todo, el objetivo del Dios del trueno 
           será volver a Asgard y parar el Ragnarok, un ciclo de vida y muerte sin fin que podría significar la destrucción total e inminente de la civilización asgardiana. </p>
-          <video src="resources/video/demon 01.mp4" id="trailer" controls></video>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/z2dbvyV5jZU?autoplay=1"></iframe>
 
       </div>
 
