le voy cargando la info de la pagina

--- a/public_html/pelicula2.html
+++ b/public_html/pelicula2.html
@@ -25,31 +25,17 @@ and open the template in the editor.
       </div>
 
       <div id="contenido">
-          <table id="tablaPel">
-              <tr>
-                  <th>Nombre</th>
-                  <th>Detalle</th>
-                  <th>Imagen</th>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td><p><a href="Pelicula1.html">ver mas de</a> </p></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr>
-          </table>
-          
-          <video src="resources/video/demon 01.mp4" id="trailer" controls></video>
-
+           <h4>La Momia</h4>
+           <img src="resources/images/momia.jpg" alt="portada2">
+          <p>
+            Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Cine de acción, Cine de aventuras, cine de fantasía y cine de terror <br/> 
+            Duracion: 105 min.<br/> Dirección: Alex Kurtzman <br/> Producción: Kevin Feige <br/> Guion:	David Koepp, Christopher McQuarrie, Dylan Kussman (Historia: Jon Spaihts, Alex Kurtzman, Jenny Lumet) <br/>
+            Reparto: Tom Cruise, Sofia Boutella, Annabelle Wallis, Jake Johnson, Courtney B. Vance, Russell Crowe<br/>
+            Compañías: <br/> Productora: Legendary Pictures, Universal Pictures <br/>
+          <!--<h3>Sinopsis</h3>--> A pesar de estar enterrada en una tumba en lo más profundo del desierto, 
+          una antigua princesa (Sofia Boutella) cuyo destino le fue arrebatado injustamente, se despierta en la época actual, 
+          trayendo consigo una maldición que ha crecido hasta límites insospechados con el paso de miles de años.  </p>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/b6iqUM7bxk4?autoplay=1"></iframe>
       </div>
 
       <div id="pie">
