--- a/public_html/pelicula3.html
+++ b/public_html/pelicula3.html
@@ -20,31 +20,24 @@
       </div>
 
       <div id="contenido">
-          <table id="tablaPel">
-              <tr>
-                  <th>Nombre</th>
-                  <th>Detalle</th>
-                  <th>Imagen</th>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td><p><a href="Pelicula1.html">ver mas de</a> </p></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr>
-          </table>
-          
-          <video src="resources/video/demon 01.mp4" id="trailer" controls></video>
+          <h4>Piratas del Caribe: La venganza de Salazar</h4>
+          <img src="resources/images/piratas.jpg" alt="portada3">
+          <p>
+            Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Aventuras, Acción, Comedia, Fantasía <br/> 
+            Duracion: 129 min..<br/> Dirección: Espen Sandberg, Joachim Ronning <br/> Producción: Kevin Feige <br/> Guion:  Jeff Nathanson. <br/>
+            Reparto: Johnny Depp, Kevin Mcnally, Javier Bardem, Geoffrey Rush, David Wenham, Brenton Thwaites, Kaya Scodelario, Orlando Bloom, Golshifteh Farahani, Stephen Graham. <br/>
+            Compañías: <br/> Productora: Walt Disney Pictures, Jerry Bruckheimer Films <br/>
+          <!--<h3>Sinopsis</h3>--> Esta vez, el pirata más excéntrico del cine, el Capitán Jack Sparrow (Johnny Depp), 
+          no podrá escapar de su destino tan fácilmente. En su camino se cruzará un peligroso villano, Salazar (Javier Bardem), 
+          un Capitán que junto a su tripulación acaban de escapar del temible Triángulo del Diablo. El único propósito de Salazar 
+          será matar a cada pirata que se cruce en su camino y, especialmente, acabar con el resbaladizo Jack Sparrow. 
 
+          <br/>Para escapar de Salazar, Jack tendrá que hacerse con el Tridente de Poseidón y, para encontrarlo, tendrá que forjar 
+          una alianza con la astrónoma Carina Smyth (Kaya Scodelario) y con Henry Turner (Brenton Thwaites), un soldado de la Marina Real. 
+          Además, en esta nueva aventura Jack se reencontrará con su antiguo compañero Will Turner (Orlando Bloom). 
+          ¿Descubrirán todos ellos qué es lo que motiva tanto odio de Salazar hacia Jack?  </p>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/-NXCU4ZfNUU?autoplay=1"></iframe>
+      
       </div>
 
       <div id="pie">
