--- a/public_html/peliculas.html
+++ b/public_html/peliculas.html
@@ -33,17 +33,17 @@ and open the template in the editor.
               </tr>
               <tr>
                   <td>Thor: Ragnarok</td>
-                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <a href="Pelicula1.html">ver mas detalles</a> </p></td>
+                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <br/><a href="Pelicula1.html">ver mas detalles</a> </p></td>
                   <td> </td>
               </tr>
               <tr>
                   <td>La Momia</td>
-                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Cine de acción, Cine de aventuras, cine de fantasía y cine de terror <a href="Pelicula2.html">ver mas detalles</a> </p></td>
+                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Cine de acción, Cine de aventuras, cine de fantasía y cine de terror <br/> <a href="Pelicula2.html">ver mas detalles</a> </p></td>
                   <td></td>
               </tr>
               <tr>
                   <td>Piratas del Caribe: La venganza de Salazar</td>
-                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Aventuras, Acción, Comedia, Fantasía <a href="Pelicula3.html">ver mas detalles</a> </p></td>
+                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Aventuras, Acción, Comedia, Fantasía <br/><a href="Pelicula3.html">ver mas detalles</a> </p></td>
                   <td></td>
               </tr>
           </table>
