correccion de errores y paginas de reg y login

--- a/public_html/Pelicula1.html
+++ b/public_html/Pelicula1.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <li><a href="peliculas.html">Peliculas</a></li>
             <li><a href="promociones.html">Promociones</a></li>
             <li><a href="entradas.html">Entradas</a></li>
-            <li style="float:right"><a class="active" href="#about">Login</a></li>
+            <li style="float:right"><a class="active" href="login.html">Login</a></li>
           </ul>
       </div>
 
@@ -29,19 +29,19 @@ and open the template in the editor.
           <h4>Thor: Ragnarok</h4>
           <img src="resources/images/thor.jpg" alt="portada1">
           <p>
-            Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <br/> 
-            Dirección: Taika Waititi <br/> Producción: Kevin Feige <br/> Guion:	Eric Pearson <br/>
+              Pais: Estados Unidos <br/> A&ncaron;o:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <br/> 
+              Direcci&oacute;n: Taika Waititi <br/> Producci&oacute;n: Kevin Feige <br/> Guion:	Eric Pearson <br/>
             Basada en: Thor de Stan Lee, Jack Kirby & Larry Lieber <br/> 
             Protagonistas: Chris Hemsworth <br/> Tom Hiddleston <br/> Cate Blanchett <br/> Mark Ruffalo <br/> 
             Idris Elba <br/> Tessa Thompson <br/> Benedict Cumberbatch <br/> Karl Urban <br/> Jeff Goldblum <br/> Anthony Hopkins <br/>
-            Compañías: <br/> Productora: Marvel Studios <br/>Distribución: Walt Disney Pictures.<br/>
+            Compa&ncaron;&iacute;as: <br/> Productora: Marvel Studios <br/>Distribuci&oacute;n: Walt Disney Pictures.<br/>
           <!--<h3>Sinopsis</h3>--> Asgard se encuentra en manos de una poderosa amenaza, la despiadada y todopoderosa Hela (Cate Blanchett), 
-          que ha robado el trono y ha encarcelado a Thor (Chris Hemsworth), enviándole como prisionero hasta el otro extremo de la galaxia. 
-          Sin su martillo, el mítico y poderoso Mjölnir, el Dios del Trueno se encontrará a sí mismo en una carrera contra el tiempo. <br/>
-          En el planeta Sakaar, Thor tendrá que luchar por su vida como un gladiador. Para escapar de su cautiverio, Thor tendrá que resultar 
-          vencedor en una competición alienígena, y derrotar a su antiguo aliado y amigo Vengador El increíble Hulk (Mark Ruffalo). Pero, 
-          por alguna misteriosa razón, Hulk no recuerda a su compañero Vengador. Claro que, por encima de todo, el objetivo del Dios del trueno 
-          será volver a Asgard y parar el Ragnarok, un ciclo de vida y muerte sin fin que podría significar la destrucción total e inminente de la civilización asgardiana. </p>
+          que ha robado el trono y ha encarcelado a Thor (Chris Hemsworth), envi&aacute;ndole como prisionero hasta el otro extremo de la galaxia. 
+          Sin su martillo, el m&iacute;tico y poderoso Mj&ouml;lnir, el Dios del Trueno se encontrar&aacute; a s&iacute; mismo en una carrera contra el tiempo. <br/>
+          En el planeta Sakaar, Thor tendr&aacute; que luchar por su vida como un gladiador. Para escapar de su cautiverio, Thor tendr&aacute; que resultar 
+          vencedor en una competici&oacute;n alien&iacute;gena, y derrotar a su antiguo aliado y amigo Vengador El incre&iacute;ble Hulk (Mark Ruffalo). Pero, 
+          por alguna misteriosa raz&oacute;n, Hulk no recuerda a su compa&ncaron;ero Vengador. Claro que, por encima de todo, el objetivo del Dios del trueno 
+          ser&aacute; volver a Asgard y parar el Ragnarok, un ciclo de vida y muerte sin fin que podr&iacute;a significar la destrucci&oacute;n total e inminente de la civilizaci&oacute;n asgardiana. </p>
       <iframe width="420" height="315" src="https://www.youtube.com/embed/z2dbvyV5jZU?autoplay=1"></iframe>
 
       </div>
