--- a/public_html/entradas.html
+++ b/public_html/entradas.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <li><a href="peliculas.html">Peliculas</a></li>
             <li><a href="promociones.html">Promociones</a></li>
             <li><a href="entradas.html">Entradas</a></li>
-            <li style="float:right"><a class="active" href="#about">Login</a></li>
+            <li style="float:right"><a class="active" href="login.html">Login</a></li>
           </ul>
       </div>
 
