--- a/public_html/pelicula2.html
+++ b/public_html/pelicula2.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <li><a href="peliculas.html">Peliculas</a></li>
             <li><a href="promociones.html">Promociones</a></li>
             <li><a href="entradas.html">Entradas</a></li>
-            <li style="float:right"><a class="active" href="#about">Login</a></li>
+            <li style="float:right"><a class="active" href="login.html">Login</a></li>
           </ul>
       </div>
 
@@ -28,13 +28,13 @@ and open the template in the editor.
            <h4>La Momia</h4>
            <img src="resources/images/momia.jpg" alt="portada2">
           <p>
-            Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Cine de acción, Cine de aventuras, cine de fantasía y cine de terror <br/> 
-            Duracion: 105 min.<br/> Dirección: Alex Kurtzman <br/> Producción: Kevin Feige <br/> Guion:	David Koepp, Christopher McQuarrie, Dylan Kussman (Historia: Jon Spaihts, Alex Kurtzman, Jenny Lumet) <br/>
+              Pais: Estados Unidos <br/> A&ncaron;o:2017 <br/> Genero: Cine de acci&oacute;n, Cine de aventuras, cine de fantas&iacute;a y cine de terror <br/> 
+              Duracion: 105 min.<br/> Direcci&oacute;n: Alex Kurtzman <br/> Producci&oacute;n: Kevin Feige <br/> Guion:	David Koepp, Christopher McQuarrie, Dylan Kussman (Historia: Jon Spaihts, Alex Kurtzman, Jenny Lumet) <br/>
             Reparto: Tom Cruise, Sofia Boutella, Annabelle Wallis, Jake Johnson, Courtney B. Vance, Russell Crowe<br/>
-            Compañías: <br/> Productora: Legendary Pictures, Universal Pictures <br/>
-          <!--<h3>Sinopsis</h3>--> A pesar de estar enterrada en una tumba en lo más profundo del desierto, 
-          una antigua princesa (Sofia Boutella) cuyo destino le fue arrebatado injustamente, se despierta en la época actual, 
-          trayendo consigo una maldición que ha crecido hasta límites insospechados con el paso de miles de años.  </p>
+            Compa&ncaron;&iacute;as: <br/> Productora: Legendary Pictures, Universal Pictures <br/>
+            <!--<h3>Sinopsis</h3>--> A pesar de estar enterrada en una tumba en lo m&aacute;s profundo del desierto, 
+            una antigua princesa (Sofia Boutella) cuyo destino le fue arrebatado injustamente, se despierta en la &eacute;poca actual, 
+            trayendo consigo una maldici&oacute;n que ha crecido hasta l&iacute;mites insospechados con el paso de miles de a&ncaron;os.  </p>
       <iframe width="420" height="315" src="https://www.youtube.com/embed/b6iqUM7bxk4?autoplay=1"></iframe>
       </div>
 
