--- a/public_html/pelicula3.html
+++ b/public_html/pelicula3.html
@@ -15,7 +15,7 @@
             <li><a href="peliculas.html">Peliculas</a></li>
             <li><a href="promociones.html">Promociones</a></li>
             <li><a href="entradas.html">Entradas</a></li>
-            <li style="float:right"><a class="active" href="#about">Login</a></li>
+            <li style="float:right"><a class="active" href="login.html">Login</a></li>
           </ul>
       </div>
 
@@ -23,19 +23,19 @@
           <h4>Piratas del Caribe: La venganza de Salazar</h4>
           <img src="resources/images/piratas.jpg" alt="portada3">
           <p>
-            Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Aventuras, Acción, Comedia, Fantasía <br/> 
-            Duracion: 129 min..<br/> Dirección: Espen Sandberg, Joachim Ronning <br/> Producción: Kevin Feige <br/> Guion:  Jeff Nathanson. <br/>
+              Pais: Estados Unidos <br/> A&ncaron;o:2017 <br/> Genero: Aventuras, Acci&oacute;n, Comedia, Fantas&iacute;a <br/> 
+              Duracion: 129 min..<br/> Direcci&oacute;n: Espen Sandberg, Joachim Ronning <br/> Producci&oacute;n: Kevin Feige <br/> Guion:  Jeff Nathanson. <br/>
             Reparto: Johnny Depp, Kevin Mcnally, Javier Bardem, Geoffrey Rush, David Wenham, Brenton Thwaites, Kaya Scodelario, Orlando Bloom, Golshifteh Farahani, Stephen Graham. <br/>
-            Compañías: <br/> Productora: Walt Disney Pictures, Jerry Bruckheimer Films <br/>
-          <!--<h3>Sinopsis</h3>--> Esta vez, el pirata más excéntrico del cine, el Capitán Jack Sparrow (Johnny Depp), 
-          no podrá escapar de su destino tan fácilmente. En su camino se cruzará un peligroso villano, Salazar (Javier Bardem), 
-          un Capitán que junto a su tripulación acaban de escapar del temible Triángulo del Diablo. El único propósito de Salazar 
-          será matar a cada pirata que se cruce en su camino y, especialmente, acabar con el resbaladizo Jack Sparrow. 
+            Compa&ncaron;&iacute;as: <br/> Productora: Walt Disney Pictures, Jerry Bruckheimer Films <br/>
+            <!--<h3>Sinopsis</h3>--> Esta vez, el pirata m&aacute;s exc&eacute;ntrico del cine, el Capit&aacute;n Jack Sparrow (Johnny Depp), 
+            no podr&aacute; escapar de su destino tan f&aacute;cilmente. En su camino se cruzar&aacute; un peligroso villano, Salazar (Javier Bardem), 
+            un Capit&aacute;n que junto a su tripulaci&oacute;n acaban de escapar del temible Tri&aacute;ngulo del Diablo. El &uacute;nico prop&oacute;sito de Salazar 
+            ser&aacute; matar a cada pirata que se cruce en su camino y, especialmente, acabar con el resbaladizo Jack Sparrow. 
 
-          <br/>Para escapar de Salazar, Jack tendrá que hacerse con el Tridente de Poseidón y, para encontrarlo, tendrá que forjar 
-          una alianza con la astrónoma Carina Smyth (Kaya Scodelario) y con Henry Turner (Brenton Thwaites), un soldado de la Marina Real. 
-          Además, en esta nueva aventura Jack se reencontrará con su antiguo compañero Will Turner (Orlando Bloom). 
-          ¿Descubrirán todos ellos qué es lo que motiva tanto odio de Salazar hacia Jack?  </p>
+            <br/>Para escapar de Salazar, Jack tendr&aacute; que hacerse con el Tridente de Poseid&oacute;n y, para encontrarlo, tendr&aacute; que forjar 
+            una alianza con la astr&oacute;noma Carina Smyth (Kaya Scodelario) y con Henry Turner (Brenton Thwaites), un soldado de la Marina Real. 
+            Adem&aacute;s, en esta nueva aventura Jack se reencontrar&aacute; con su antiguo compa&ncaron;ero Will Turner (Orlando Bloom). 
+            ¿Descubrir&aacute;n todos ellos qu&eacute; es lo que motiva tanto odio de Salazar hacia Jack?  </p>
       <iframe width="420" height="315" src="https://www.youtube.com/embed/-NXCU4ZfNUU?autoplay=1"></iframe>
       
       </div>
