--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,7 @@
             <li><a href="peliculas.html">Peliculas</a></li>
             <li><a href="promociones.html">Promociones</a></li>
             <li><a href="entradas.html">Entradas</a></li>
-            <li style="float:right"><a class="active" href="#about">Login</a></li>
+            <li style="float:right"><a class="active" href="login.html">Login</a></li>
           </ul>
       </div>
 
