--- a/public_html/peliculas.html
+++ b/public_html/peliculas.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <li><a href="peliculas.html">Peliculas</a></li>
             <li><a href="promociones.html">Promociones</a></li>
             <li><a href="entradas.html">Entradas</a></li>
-            <li style="float:right"><a class="active" href="#about">Login</a></li>
+            <li style="float:right"><a class="active" href="login.html">Login</a></li>
           </ul>
       </div>
 
@@ -33,17 +33,17 @@ and open the template in the editor.
               </tr>
               <tr>
                   <td>Thor: Ragnarok</td>
-                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <br/><a href="Pelicula1.html">ver mas detalles</a> </p></td>
+                  <td><p> Pais: Estados Unidos <br/> A&ncaron;o:2017 <br/> Genero: Fantasia, Superhoeroes, Aventura, Accion <br/><a href="Pelicula1.html">ver mas detalles</a> </p></td>
                   <td> </td>
               </tr>
               <tr>
                   <td>La Momia</td>
-                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Cine de acción, Cine de aventuras, cine de fantasía y cine de terror <br/> <a href="Pelicula2.html">ver mas detalles</a> </p></td>
+                  <td><p> Pais: Estados Unidos <br/> A&ncaron;o:2017 <br/> Genero: Cine de acci&oacute;n, Cine de aventuras, cine de fantas&iacute;a y cine de terror <br/> <a href="Pelicula2.html">ver mas detalles</a> </p></td>
                   <td></td>
               </tr>
               <tr>
                   <td>Piratas del Caribe: La venganza de Salazar</td>
-                  <td><p> Pais: Estados Unidos <br/> Año:2017 <br/> Genero: Aventuras, Acción, Comedia, Fantasía <br/><a href="Pelicula3.html">ver mas detalles</a> </p></td>
+                  <td><p> Pais: Estados Unidos <br/> A&ncaron;o:2017 <br/> Genero: Aventuras, Acci&oacute;n, Comedia, Fantas&iacute;a <br/><a href="Pelicula3.html">ver mas detalles</a> </p></td>
                   <td></td>
               </tr>
           </table>
